--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nguyenhaophan.github.io/",
+  "homepage": "https://nguyenhaophan.github.io/netflix-react-app",
   "name": "netflix-react-app",
   "version": "0.1.0",
   "private": true,
